// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component renders an anchor 1`] = `
.sxlyjic {
  background: unset;
  border: unset;
  padding: unset;
  color: var(--sx-colors-primary);
  cursor: pointer;
  font-family: var(--sx-fonts-body);
  text-decoration: none;
}

.sxlyjic:focus,
.sxlyjic:hover {
  color: var(--sx-colors-primaryMid);
  text-decoration: underline;
}

.sxlyjic:active {
  color: var(--sx-colors-primaryDark);
}

.sxyn8hn > .sxlyjic,
.sxlk8sk > .sxlyjic,
.sx03kze > .sxlyjic {
  font-size: 100%;
  line-height: 1;
}

.sxyn8hn > .sxlyjic::before,
.sxyn8hn > .sxlyjic::after,
.sxlk8sk > .sxlyjic::before,
.sxlk8sk > .sxlyjic::after,
.sx03kze > .sxlyjic::before,
.sx03kze > .sxlyjic::after {
  content: none;
}

.sxlyjic8bitc--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
}

.sxlyjic8bitc--size-md::before {
  content: '';
  margin-bottom: -0.3864em;
  display: table;
}

.sxlyjic8bitc--size-md::after {
  content: '';
  margin-top: -0.3864em;
  display: table;
}

<div>
  <a
    class="sxlyjic sxlyjic8bitc--size-md"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;

exports[`Link component renders an large anchor 1`] = `
.sxlyjic {
  background: unset;
  border: unset;
  padding: unset;
  color: var(--sx-colors-primary);
  cursor: pointer;
  font-family: var(--sx-fonts-body);
  text-decoration: none;
}

.sxlyjic:focus,
.sxlyjic:hover {
  color: var(--sx-colors-primaryMid);
  text-decoration: underline;
}

.sxlyjic:active {
  color: var(--sx-colors-primaryDark);
}

.sxyn8hn > .sxlyjic,
.sxlk8sk > .sxlyjic,
.sx03kze > .sxlyjic {
  font-size: 100%;
  line-height: 1;
}

.sxyn8hn > .sxlyjic::before,
.sxyn8hn > .sxlyjic::after,
.sxlk8sk > .sxlyjic::before,
.sxlk8sk > .sxlyjic::after,
.sx03kze > .sxlyjic::before,
.sx03kze > .sxlyjic::after {
  content: none;
}

.sxlyjic8bitc--size-md {
  font-size: var(--sx-fontSizes-md);
  line-height: 1.5;
}

.sxlyjic8bitc--size-md::before {
  content: '';
  margin-bottom: -0.3864em;
  display: table;
}

.sxlyjic8bitc--size-md::after {
  content: '';
  margin-top: -0.3864em;
  display: table;
}

.sxlyjicpfvfy--size-lg {
  font-size: var(--sx-fontSizes-lg);
  line-height: 1.52;
}

.sxlyjicpfvfy--size-lg::before {
  content: '';
  margin-bottom: -0.3983em;
  display: table;
}

.sxlyjicpfvfy--size-lg::after {
  content: '';
  margin-top: -0.3983em;
  display: table;
}

<div>
  <a
    class="sxlyjic sxlyjicpfvfy--size-lg"
    href="https://google.com/"
  >
    GOOGLE
  </a>
</div>
`;
